[gd_scene load_steps=17 format=4 uid="uid://c1we3fjd1prnw"]

[ext_resource type="PackedScene" uid="uid://drwpijhad8ye1" path="res://src/scene/game/base/forest_scene.tscn" id="1_eihxy"]
[ext_resource type="Script" uid="uid://d6p3tqntqt07" path="res://src/scene/game/scene_166.gd" id="2_daaud"]
[ext_resource type="PackedScene" uid="uid://b2g1ep1bl2ue8" path="res://src/unit/character/npc/crab_stick.tscn" id="3_hhm2q"]
[ext_resource type="PackedScene" uid="uid://dsay7acjn1qgc" path="res://src/unit/character/enemy/boss/big_mushroom/big_mushroom.tscn" id="3_qeyvo"]
[ext_resource type="PackedScene" uid="uid://b47pu6erso8ra" path="res://src/unit/character/npc/big_mushroom_npc.tscn" id="4_8bgdh"]
[ext_resource type="PackedScene" uid="uid://bictjaq7mapmy" path="res://src/scene/teleporter.tscn" id="4_vq4ss"]
[ext_resource type="PackedScene" uid="uid://dhp3xvkqaqrid" path="res://src/scene/entry_point.tscn" id="5_qeyvo"]
[ext_resource type="Texture2D" uid="uid://bqgfmnj4y6r8g" path="res://asset/texture/unit/enemy/boss/big_mushroom/sleep_particle.webp" id="5_uxiiv"]
[ext_resource type="Texture2D" uid="uid://c42ew34tvwt57" path="res://src/asset/curve/fade_out.tres" id="6_6l2gc"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_hhm2q"]
b = Vector2(0, 168)

[sub_resource type="Curve" id="Curve_n3pvq"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2
metadata/_snap_enabled = true

[sub_resource type="CurveTexture" id="CurveTexture_q2nty"]
curve = SubResource("Curve_n3pvq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6l2gc"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
angle_min = -9.9999895
angle_max = 10.0000105
direction = Vector3(0, -1, 0)
initial_velocity_max = 10.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_q2nty")
alpha_curve = ExtResource("6_6l2gc")

[sub_resource type="Animation" id="Animation_uxiiv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BigMushroomNpc:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(288, 204)]
}

[sub_resource type="Animation" id="Animation_8bgdh"]
resource_name = "wake"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BigMushroomNpc:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(288, 204), Vector2(288, 184)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uxiiv"]
_data = {
&"RESET": SubResource("Animation_uxiiv"),
&"wake": SubResource("Animation_8bgdh")
}

[node name="Scene166" instance=ExtResource("1_eihxy")]
script = ExtResource("2_daaud")
custom_explore = true

[node name="CrabStick" parent="Background/Prop" index="0" instance=ExtResource("3_hhm2q")]
z_index = -1
position = Vector2(72, 176)
story_location = 3
direction = 1

[node name="Tile" parent="Background/Prop" index="1"]
tile_map_data = PackedByteArray("AAAoAAEAAQAGAAUAAAAoAAAAAQALAAYAAAAoAP//AQALAAIAAAAoAP7/AQALAAAAAAAnAAEAAQAJAAYAAAAnAAAAAQAJAAYAAAAnAP//AQAJAAIAAAAnAP7/AQAKAAQAAAAmAAEAAQAKAAUAAAAmAAAAAQAJAAIAAAAmAP//AQAJAAIAAAAmAP7/AQAKAAAAAAAlAAEAAQAKAAUAAAAlAAAAAQAKAAEAAAAlAP//AQAKAAUAAAAlAP7/AQAKAAAAAAAkAAEAAQAJAAYAAAAkAAAAAQAKAAEAAAAkAP//AQAKAAEAAAAkAP7/AQAKAAQAAAAjAAEAAQAJAAYAAAAjAAAAAQAKAAEAAAAjAP//AQAKAAUAAAAjAP7/AQAKAAAAAAAiAAEAAQAJAAIAAAAiAAAAAQAKAAUAAAAiAP//AQAJAAYAAAAiAP7/AQAKAAQAAAAhAAEAAQAJAAYAAAAhAAAAAQAKAAEAAAAhAP//AQAKAAUAAAAhAP7/AQAKAAAAAAAgAAEAAQAJAAYAAAAgAAAAAQAKAAUAAAAgAP//AQAJAAIAAAAgAP7/AQAKAAAAAAAfAAEAAQAFAAEAAAAfAAAAAQAIAAUAAAAfAP//AQAIAAUAAAAfAP7/AQAIAAAAAAAQAAEAAQAGAAUAAAAQAAAAAQALAAYAAAAQAP//AQALAAIAAAAQAP7/AQALAAQAAAAPAAEAAQAKAAEAAAAPAAAAAQAJAAYAAAAPAP//AQAJAAIAAAAPAP7/AQAKAAAAAAAOAAEAAQAJAAIAAAAOAAAAAQAJAAYAAAAOAP//AQAJAAYAAAAOAP7/AQAKAAQAAAANAAEAAQAJAAYAAAANAAAAAQAJAAIAAAANAP//AQAJAAIAAAANAP7/AQAKAAQAAAAMAAEAAQAKAAUAAAAMAAAAAQAJAAIAAAAMAP//AQAKAAEAAAAMAP7/AQAKAAQAAAALAAEAAQAKAAEAAAALAAAAAQAKAAEAAAALAP//AQAKAAEAAAALAP7/AQAKAAAAAAAKAAEAAQAKAAUAAAAKAAAAAQAKAAEAAAAKAP//AQAKAAUAAAAKAP7/AQAKAAAAAAAJAAEAAQAJAAYAAAAJAAAAAQAJAAIAAAAJAP//AQAKAAUAAAAJAP7/AQAKAAQAAAAIAAEAAQAKAAUAAAAIAAAAAQAJAAIAAAAIAP//AQAJAAYAAAAIAP7/AQAKAAQAAAAHAAEAAQAFAAEAAAAHAAAAAQAIAAUAAAAHAP//AQAIAAEAAAAHAP7/AQAIAAAAAAAuAAMAAQALAAYAAAAuAAIAAQALAAIAAAAuAAEAAQALAAQAAAAtAAMAAQAJAAIAAAAtAAIAAQAJAAIAAAAtAAEAAQAKAAAAAAAsAAMAAQAJAAYAAAAsAAIAAQAKAAEAAAAsAAEAAQAKAAAAAAArAAMAAQAJAAIAAAArAAIAAQAKAAEAAAArAAEAAQAKAAQAAAAqAAMAAQAKAAEAAAAqAAIAAQAJAAYAAAAqAAEAAQAKAAAAAAApAAMAAQAJAAYAAAApAAIAAQAJAAIAAAApAAEAAQAKAAAAAAAoAAMAAQAFAAIAAAAoAAIAAQAKAAEAAAAnAAMAAQAJAAMAAAAnAAIAAQAJAAIAAAAmAAMAAQAJAAcAAAAmAAIAAQAKAAUAAAAlAAMAAQAJAAcAAAAlAAIAAQAJAAIAAAAkAAMAAQAJAAcAAAAkAAIAAQAKAAEAAAAjAAMAAQAJAAcAAAAjAAIAAQAJAAYAAAAiAAMAAQAJAAcAAAAiAAIAAQAJAAYAAAAhAAMAAQAJAAMAAAAhAAIAAQAKAAEAAAAgAAMAAQAJAAMAAAAgAAIAAQAKAAEAAAAfAAMAAQAJAAMAAAAfAAIAAQAKAAEAAAAeAAMAAQAJAAMAAAAeAAIAAQAJAAIAAAAeAAEAAQAKAAQAAAAdAAMAAQAJAAMAAAAdAAIAAQAKAAUAAAAdAAEAAQAKAAAAAAAcAAMAAQAJAAcAAAAcAAIAAQAKAAUAAAAcAAEAAQAKAAAAAAAbAAMAAQAJAAMAAAAbAAIAAQAKAAEAAAAbAAEAAQAKAAQAAAAaAAMAAQAJAAMAAAAaAAIAAQAJAAIAAAAaAAEAAQAKAAAAAAAZAAMAAQAJAAcAAAAZAAIAAQAKAAEAAAAZAAEAAQAKAAQAAAAYAAMAAQAJAAcAAAAYAAIAAQAKAAUAAAAYAAEAAQAKAAAAAAAXAAMAAQAJAAMAAAAXAAIAAQAKAAEAAAAXAAEAAQAKAAQAAAAWAAMAAQAJAAcAAAAWAAIAAQAKAAEAAAAWAAEAAQAKAAQAAAAVAAMAAQAJAAMAAAAVAAIAAQAJAAIAAAAVAAEAAQAKAAQAAAAUAAMAAQAJAAMAAAAUAAIAAQAJAAIAAAAUAAEAAQAKAAAAAAATAAMAAQAJAAcAAAATAAIAAQAJAAYAAAATAAEAAQAKAAQAAAASAAMAAQAJAAcAAAASAAIAAQAJAAIAAAASAAEAAQAKAAAAAAARAAMAAQAJAAMAAAARAAIAAQAJAAYAAAARAAEAAQAKAAAAAAAQAAMAAQAJAAcAAAAQAAIAAQAKAAUAAAAPAAMAAQAJAAMAAAAPAAIAAQAKAAUAAAAOAAMAAQAJAAcAAAAOAAIAAQAJAAIAAAANAAMAAQAJAAcAAAANAAIAAQAKAAUAAAAMAAMAAQAJAAMAAAAMAAIAAQAKAAUAAAALAAMAAQAJAAcAAAALAAIAAQAJAAIAAAAKAAMAAQAJAAcAAAAKAAIAAQAKAAUAAAAJAAMAAQAJAAcAAAAJAAIAAQAKAAEAAAAIAAMAAQAJAAcAAAAIAAIAAQAKAAEAAAAHAAMAAQAGAAIAAAAHAAIAAQAJAAYAAAAGAAMAAQAJAAIAAAAGAAIAAQAKAAEAAAAGAAEAAQAKAAAAAAAFAAMAAQAKAAUAAAAFAAIAAQAJAAYAAAAFAAEAAQAKAAAAAAAEAAMAAQAJAAYAAAAEAAIAAQAJAAIAAAAEAAEAAQAKAAAAAAADAAMAAQAKAAUAAAADAAIAAQAJAAIAAAADAAEAAQAKAAQAAAACAAMAAQAJAAIAAAACAAIAAQAKAAUAAAACAAEAAQAKAAQAAAABAAMAAQAIAAEAAAABAAIAAQAIAAUAAAABAAEAAQAIAAQAAAAuABcAAQALAAYAAAAuABYAAQALAAIAAAAuABUAAQALAAIAAAAuABQAAQALAAYAAAAuABMAAQALAAIAAAAuABIAAQALAAIAAAAuABEAAQALAAIAAAAuABAAAQALAAIAAAAuAA8AAQALAAYAAAAuAA4AAQALAAYAAAAuAA0AAQALAAIAAAAuAAwAAQALAAYAAAAuAAsAAQALAAIAAAAuAAoAAQALAAIAAAAuAAkAAQALAAIAAAAuAAgAAQALAAYAAAAuAAcAAQALAAIAAAAuAAYAAQALAAIAAAAuAAUAAQALAAIAAAAuAAQAAQALAAYAAAAtABcAAQAKAAEAAAAtABYAAQAKAAUAAAAtABUAAQAJAAYAAAAtABQAAQAKAAUAAAAtABMAAQAJAAIAAAAtABIAAQAJAAIAAAAtABEAAQAKAAUAAAAtABAAAQAKAAEAAAAtAA8AAQAJAAYAAAAtAA4AAQAJAAIAAAAtAA0AAQAKAAEAAAAtAAwAAQAKAAEAAAAtAAsAAQAJAAYAAAAtAAoAAQAJAAIAAAAtAAkAAQAKAAEAAAAtAAgAAQAJAAYAAAAtAAcAAQAJAAIAAAAtAAYAAQAJAAYAAAAtAAUAAQAKAAUAAAAtAAQAAQAKAAEAAAAsABcAAQAJAAIAAAAsABYAAQAJAAYAAAAsABUAAQAJAAYAAAAsABQAAQAKAAUAAAAsABMAAQAJAAYAAAAsABIAAQAKAAEAAAAsABEAAQAFAAUAAAAsABAAAQAIAAEAAAAsAA8AAQAIAAEAAAAsAA4AAQAIAAEAAAAsAA0AAQAIAAUAAAAsAAwAAQAIAAEAAAAsAAsAAQAIAAUAAAAsAAoAAQAIAAEAAAAsAAkAAQAIAAUAAAAsAAgAAQAIAAUAAAAsAAcAAQAFAAIAAAAsAAYAAQAKAAEAAAAsAAUAAQAKAAEAAAAsAAQAAQAKAAUAAAArABcAAQAKAAEAAAArABYAAQAJAAYAAAArABUAAQAKAAUAAAAqABcAAQAKAAEAAAAqABYAAQAKAAUAAAAqABUAAQAJAAIAAAApABcAAQAJAAYAAAApABYAAQAKAAEAAAApABUAAQAKAAUAAAAoABcAAQAKAAEAAAAoABYAAQAJAAYAAAAoABUAAQAJAAYAAAAnABcAAQAJAAIAAAAnABYAAQAKAAEAAAAnABUAAQAJAAIAAAAmABcAAQAJAAIAAAAmABYAAQAKAAEAAAAmABUAAQAFAAEAAAAlABcAAQAKAAUAAAAlABYAAQAKAAEAAAAlABUAAQAKAAQAAAAkABcAAQAKAAEAAAAkABYAAQAKAAUAAAAkABUAAQAKAAQAAAAjABcAAQAJAAIAAAAjABYAAQAJAAIAAAAjABUAAQAKAAAAAAAiABcAAQAJAAIAAAAiABYAAQAJAAYAAAAiABUAAQAKAAAAAAAhABcAAQAKAAUAAAAhABYAAQAKAAEAAAAhABUAAQAKAAQAAAAgABcAAQAKAAUAAAAgABYAAQAJAAIAAAAgABUAAQAKAAAAAAAfABcAAQAKAAUAAAAfABYAAQAJAAIAAAAfABUAAQAKAAAAAAAeABcAAQAKAAEAAAAeABYAAQAKAAUAAAAeABUAAQAKAAAAAAAdABcAAQAJAAIAAAAdABYAAQAKAAEAAAAdABUAAQAKAAAAAAAcABcAAQAJAAYAAAAcABYAAQAKAAUAAAAcABUAAQAKAAAAAAAbABcAAQAKAAUAAAAbABYAAQAKAAUAAAAbABUAAQAKAAAAAAAaABcAAQAJAAYAAAAaABYAAQAJAAIAAAAaABUAAQAKAAAAAAAZABcAAQAKAAEAAAAZABYAAQAJAAYAAAAZABUAAQAKAAAAAAAYABcAAQAJAAYAAAAYABYAAQAKAAEAAAAYABUAAQAKAAQAAAAXABcAAQAKAAUAAAAXABYAAQAKAAEAAAAXABUAAQAKAAAAAAAWABcAAQAKAAEAAAAWABYAAQAJAAYAAAAWABUAAQAKAAAAAAAVABcAAQAJAAYAAAAVABYAAQAJAAYAAAAVABUAAQAKAAQAAAAUABcAAQAJAAYAAAAUABYAAQAKAAUAAAAUABUAAQAKAAQAAAATABcAAQAJAAYAAAATABYAAQAJAAYAAAATABUAAQAKAAAAAAASABcAAQAKAAEAAAASABYAAQAJAAYAAAASABUAAQAKAAAAAAARABcAAQAKAAEAAAARABYAAQAKAAUAAAARABUAAQAKAAQAAAAQABcAAQAKAAUAAAAQABYAAQAKAAUAAAAQABUAAQAKAAQAAAAPABcAAQAKAAUAAAAPABYAAQAKAAEAAAAPABUAAQAKAAAAAAAOABcAAQAJAAIAAAAOABYAAQAJAAIAAAAOABUAAQAKAAAAAAANABcAAQAKAAUAAAANABYAAQAJAAYAAAANABUAAQAKAAAAAAAMABcAAQAJAAIAAAAMABYAAQAJAAIAAAAMABUAAQAKAAAAAAALABcAAQAKAAUAAAALABYAAQAJAAYAAAALABUAAQAKAAAAAAAKABcAAQAJAAYAAAAKABYAAQAKAAUAAAAKABUAAQAKAAQAAAAJABcAAQAJAAIAAAAJABYAAQAJAAIAAAAJABUAAQAKAAAAAAAIABcAAQAKAAUAAAAIABYAAQAJAAYAAAAIABUAAQAKAAAAAAAHABcAAQAJAAYAAAAHABYAAQAJAAIAAAAHABUAAQAGAAUAAAAGABcAAQAKAAUAAAAGABYAAQAKAAEAAAAGABUAAQAJAAYAAAAFABcAAQAKAAUAAAAFABYAAQAKAAUAAAAFABUAAQAKAAUAAAAEABcAAQAKAAUAAAAEABYAAQAJAAYAAAAEABUAAQAKAAUAAAADABcAAQAKAAEAAAADABYAAQAJAAIAAAADABUAAQAJAAIAAAACABcAAQAKAAUAAAACABYAAQAKAAEAAAACABUAAQAKAAEAAAABABcAAQAIAAUAAAABABYAAQAIAAEAAAABABUAAQAIAAUAAAADABQAAQAKAAUAAAADABMAAQAKAAUAAAADABIAAQAKAAEAAAADABEAAQAJAAYAAAADABAAAQAKAAEAAAADAA8AAQAGAAEAAAADAA4AAQALAAIAAAADAA0AAQALAAYAAAADAAwAAQALAAIAAAADAAsAAQALAAIAAAADAAoAAQALAAYAAAADAAkAAQALAAIAAAADAAgAAQALAAIAAAADAAcAAQAGAAIAAAADAAYAAQAJAAIAAAADAAUAAQAJAAIAAAADAAQAAQAKAAUAAAACABQAAQAKAAUAAAACABMAAQAJAAYAAAACABIAAQAJAAYAAAACABEAAQAJAAIAAAACABAAAQAKAAUAAAACAA8AAQAKAAEAAAACAA4AAQAJAAIAAAACAA0AAQAJAAYAAAACAAwAAQAJAAIAAAACAAsAAQAKAAEAAAACAAoAAQAJAAYAAAACAAkAAQAKAAEAAAACAAgAAQAKAAUAAAACAAcAAQAKAAEAAAACAAYAAQAJAAYAAAACAAUAAQAJAAIAAAACAAQAAQAKAAUAAAABABQAAQAIAAEAAAABABMAAQAIAAEAAAABABIAAQAIAAEAAAABABEAAQAIAAEAAAABABAAAQAIAAUAAAABAA8AAQAIAAUAAAABAA4AAQAIAAEAAAABAA0AAQAIAAUAAAABAAwAAQAIAAEAAAABAAsAAQAIAAEAAAABAAoAAQAIAAUAAAABAAkAAQAIAAEAAAABAAgAAQAIAAEAAAABAAcAAQAIAAUAAAABAAYAAQAIAAEAAAABAAUAAQAIAAUAAAABAAQAAQAIAAEAAAAFAAUAAQAGAAIAAAAFAAQAAQAKAAUAAAAEAAUAAQAJAAYAAAAEAAQAAQAKAAEAAAArAAUAAQAKAAEAAAArAAQAAQAJAAIAAAAqAAUAAQAFAAIAAAAqAAQAAQAKAAEAAAApAAUAAQAJAAcAAAApAAQAAQAKAAEAAAAoAAUAAQAIAAMAAAAoAAQAAQAIAAEAAAArAAcAAQAJAAMAAAArAAYAAQAKAAUAAAAqAAcAAQAIAAMAAAAqAAYAAQAIAAEAAAAHAAUAAQALAAcAAAAHAAQAAQALAAIAAAAGAAUAAQAJAAMAAAAGAAQAAQAKAAEAAAAFAAcAAQALAAcAAAAFAAYAAQALAAIAAAAEAAcAAQAJAAcAAAAEAAYAAQAKAAUAAAAHABQAAQALAAYAAAAHABMAAQALAAAAAAAGABQAAQAJAAYAAAAGABMAAQAKAAAAAAAFABQAAQAKAAEAAAAFABMAAQAGAAEAAAAEABQAAQAKAAUAAAAEABMAAQAKAAEAAAArABQAAQAJAAIAAAArABMAAQAJAAIAAAAqABQAAQAKAAEAAAAqABMAAQAFAAEAAAApABQAAQAJAAYAAAApABMAAQAKAAQAAAAoABQAAQAKAAUAAAAoABMAAQAKAAQAAAAnABQAAQAKAAUAAAAnABMAAQAKAAQAAAAmABQAAQAIAAEAAAAmABMAAQAIAAQAAAArABIAAQAJAAYAAAArABEAAQAKAAAAAAAqABIAAQAIAAUAAAAqABEAAQAIAAQAAAAuABgAAQALAAcAAAAtABgAAQAJAAcAAAAsABgAAQAJAAcAAAArABgAAQAJAAMAAAAqABgAAQAJAAMAAAApABgAAQAJAAMAAAAoABgAAQAJAAMAAAAnABgAAQAJAAcAAAAmABgAAQAJAAcAAAAlABgAAQAJAAcAAAAkABgAAQAJAAMAAAAjABgAAQAJAAcAAAAiABgAAQAJAAcAAAAhABgAAQAJAAMAAAAgABgAAQAJAAcAAAAfABgAAQAJAAMAAAAeABgAAQAJAAMAAAAdABgAAQAJAAcAAAAcABgAAQAJAAMAAAAbABgAAQAJAAMAAAAaABgAAQAJAAcAAAAZABgAAQAJAAMAAAAYABgAAQAJAAMAAAAXABgAAQAJAAMAAAAWABgAAQAJAAcAAAAVABgAAQAJAAcAAAAUABgAAQAJAAcAAAATABgAAQAJAAcAAAASABgAAQAJAAMAAAARABgAAQAJAAMAAAAQABgAAQAJAAcAAAAPABgAAQAJAAcAAAAOABgAAQAJAAMAAAANABgAAQAJAAMAAAAMABgAAQAJAAMAAAALABgAAQAJAAMAAAAKABgAAQAJAAcAAAAJABgAAQAJAAMAAAAIABgAAQAJAAMAAAAHABgAAQAJAAcAAAAGABgAAQAJAAcAAAAFABgAAQAJAAMAAAAEABgAAQAJAAMAAAADABgAAQAJAAMAAAACABgAAQAJAAMAAAABABgAAQAIAAMAAAAFABIAAQALAAIAAAAFABEAAQALAAYAAAAFABAAAQALAAIAAAAFAA8AAQALAAQAAAAEABIAAQAJAAIAAAAEABEAAQAJAAIAAAAEABAAAQAKAAUAAAAEAA8AAQAKAAQAAAA=")

[node name="BigMushroomNpc" parent="." index="1" instance=ExtResource("4_8bgdh")]
position = Vector2(288, 204)

[node name="GameTile" parent="." index="2"]
tile_map_data = PackedByteArray("AAAxABwAAAALAAcAAAAxABsAAAALAAYAAAAxABoAAAALAAYAAAAxABkAAAALAAYAAAAxABgAAAALAAIAAAAxABcAAAALAAYAAAAwABwAAAAJAAcAAAAwABsAAAAJAAIAAAAwABoAAAAKAAEAAAAwABkAAAAJAAYAAAAwABgAAAAKAAUAAAAwABcAAAAKAAUAAAAvABwAAAAJAAcAAAAvABsAAAAJAAYAAAAvABoAAAAJAAYAAAAvABkAAAAJAAIAAAAvABgAAAAKAAUAAAAvABcAAAAKAAUAAAAuABwAAAAJAAcAAAAuABsAAAAJAAYAAAAuABoAAAAJAAYAAAAuABkAAAAJAAYAAAAuABgAAAAJAAYAAAAuABcAAAAFAAEAAAAtABwAAAAJAAcAAAAtABsAAAAJAAYAAAAtABoAAAAJAAYAAAAtABkAAAAJAAYAAAAtABgAAAAJAAIAAAAtABcAAAAKAAAAAAAsABwAAAAJAAcAAAAsABsAAAAJAAIAAAAsABoAAAAKAAEAAAAsABkAAAAJAAYAAAAsABgAAAAJAAYAAAAsABcAAAAKAAAAAAArABwAAAAJAAMAAAArABsAAAAJAAIAAAArABoAAAAKAAUAAAArABkAAAAKAAEAAAArABgAAAAJAAIAAAArABcAAAAKAAAAAAAqABwAAAAJAAMAAAAqABsAAAAKAAEAAAAqABoAAAAJAAYAAAAqABkAAAAKAAUAAAAqABgAAAAJAAIAAAAqABcAAAAKAAQAAAApABwAAAAJAAMAAAApABsAAAAJAAIAAAApABoAAAAJAAIAAAApABkAAAAKAAEAAAApABgAAAAKAAUAAAApABcAAAAKAAAAAAAoABwAAAAJAAcAAAAoABsAAAAKAAEAAAAoABoAAAAJAAYAAAAoABkAAAAKAAUAAAAoABgAAAAJAAIAAAAoABcAAAAKAAQAAAAnABwAAAAJAAMAAAAnABsAAAAJAAYAAAAnABoAAAAJAAIAAAAnABkAAAAJAAIAAAAnABgAAAAJAAIAAAAnABcAAAAKAAQAAAAmABwAAAAJAAMAAAAmABsAAAAKAAUAAAAmABoAAAAJAAYAAAAmABkAAAAJAAYAAAAmABgAAAAKAAEAAAAmABcAAAAKAAQAAAAlABwAAAAJAAMAAAAlABsAAAAKAAEAAAAlABoAAAAKAAUAAAAlABkAAAAKAAUAAAAlABgAAAAKAAEAAAAlABcAAAAKAAQAAAAkABwAAAAJAAcAAAAkABsAAAAJAAIAAAAkABoAAAAJAAYAAAAkABkAAAAJAAYAAAAkABgAAAAKAAUAAAAkABcAAAAKAAQAAAAjABwAAAAJAAMAAAAjABsAAAAKAAEAAAAjABoAAAAJAAIAAAAjABkAAAAKAAEAAAAjABgAAAAJAAYAAAAjABcAAAAKAAQAAAAiABwAAAAJAAcAAAAiABsAAAAJAAIAAAAiABoAAAAKAAEAAAAiABkAAAAJAAYAAAAiABgAAAAKAAEAAAAiABcAAAAKAAQAAAAhABwAAAAJAAMAAAAhABsAAAAJAAYAAAAhABoAAAAJAAIAAAAhABkAAAAKAAEAAAAhABgAAAAJAAYAAAAhABcAAAAKAAAAAAAgABwAAAAJAAcAAAAgABsAAAAKAAUAAAAgABoAAAAJAAIAAAAgABkAAAAJAAIAAAAgABgAAAAJAAIAAAAgABcAAAAKAAQAAAAfABwAAAAJAAMAAAAfABsAAAAJAAYAAAAfABoAAAAJAAYAAAAfABkAAAAJAAYAAAAfABgAAAAJAAYAAAAfABcAAAAKAAAAAAAeABwAAAAJAAcAAAAeABsAAAAJAAIAAAAeABoAAAAKAAUAAAAeABkAAAAJAAIAAAAeABgAAAAJAAIAAAAeABcAAAAKAAQAAAAdABwAAAAJAAcAAAAdABsAAAAKAAEAAAAdABoAAAAJAAYAAAAdABkAAAAKAAEAAAAdABgAAAAJAAYAAAAdABcAAAAKAAQAAAAcABwAAAAJAAMAAAAcABsAAAAJAAIAAAAcABoAAAAKAAUAAAAcABkAAAAKAAEAAAAcABgAAAAKAAUAAAAcABcAAAAKAAAAAAAbABwAAAAJAAMAAAAbABsAAAAKAAEAAAAbABoAAAAKAAUAAAAbABkAAAAKAAUAAAAbABgAAAAJAAYAAAAbABcAAAAKAAAAAAAaABwAAAAJAAcAAAAaABsAAAAKAAUAAAAaABoAAAAKAAEAAAAaABkAAAAJAAIAAAAaABgAAAAKAAUAAAAaABcAAAAKAAAAAAAZABwAAAAJAAcAAAAZABsAAAAJAAYAAAAZABoAAAAJAAIAAAAZABkAAAAJAAYAAAAZABgAAAAJAAYAAAAZABcAAAAKAAAAAAAYABwAAAAJAAcAAAAYABsAAAAJAAYAAAAYABoAAAAJAAIAAAAYABkAAAAKAAUAAAAYABgAAAAKAAEAAAAYABcAAAAKAAAAAAAXABwAAAAJAAMAAAAXABsAAAAJAAIAAAAXABoAAAAKAAUAAAAXABkAAAAKAAUAAAAXABgAAAAJAAIAAAAXABcAAAAKAAQAAAAWABwAAAAJAAcAAAAWABsAAAAKAAEAAAAWABoAAAAJAAYAAAAWABkAAAAKAAUAAAAWABgAAAAJAAIAAAAWABcAAAAKAAAAAAAVABwAAAAJAAcAAAAVABsAAAAJAAYAAAAVABoAAAAJAAYAAAAVABkAAAAKAAEAAAAVABgAAAAJAAIAAAAVABcAAAAKAAQAAAAUABwAAAAJAAMAAAAUABsAAAAKAAEAAAAUABoAAAAKAAUAAAAUABkAAAAJAAYAAAAUABgAAAAJAAYAAAAUABcAAAAKAAQAAAATABwAAAAJAAcAAAATABsAAAAKAAEAAAATABoAAAAKAAUAAAATABkAAAAKAAUAAAATABgAAAAJAAIAAAATABcAAAAKAAAAAAASABwAAAAJAAcAAAASABsAAAAJAAYAAAASABoAAAAJAAIAAAASABkAAAAJAAYAAAASABgAAAAKAAEAAAASABcAAAAKAAAAAAARABwAAAAJAAcAAAARABsAAAAKAAEAAAARABoAAAAKAAUAAAARABkAAAAJAAIAAAARABgAAAAJAAYAAAARABcAAAAKAAQAAAAQABwAAAAJAAcAAAAQABsAAAAJAAIAAAAQABoAAAAJAAYAAAAQABkAAAAJAAIAAAAQABgAAAAKAAUAAAAQABcAAAAKAAAAAAAPABwAAAAJAAcAAAAPABsAAAAJAAIAAAAPABoAAAAJAAYAAAAPABkAAAAKAAUAAAAPABgAAAAKAAUAAAAPABcAAAAKAAQAAAAOABwAAAAJAAcAAAAOABsAAAAJAAIAAAAOABoAAAAJAAIAAAAOABkAAAAKAAEAAAAOABgAAAAJAAIAAAAOABcAAAAKAAQAAAANABwAAAAJAAcAAAANABsAAAAJAAIAAAANABoAAAAKAAEAAAANABkAAAAKAAEAAAANABgAAAAJAAYAAAANABcAAAAKAAQAAAAMABwAAAAJAAMAAAAMABsAAAAJAAYAAAAMABoAAAAKAAUAAAAMABkAAAAJAAYAAAAMABgAAAAJAAYAAAAMABcAAAAKAAAAAAALABwAAAAJAAcAAAALABsAAAAKAAUAAAALABoAAAAJAAIAAAALABkAAAAKAAUAAAALABgAAAAJAAYAAAALABcAAAAKAAAAAAAKABwAAAAJAAMAAAAKABsAAAAKAAUAAAAKABoAAAAJAAIAAAAKABkAAAAJAAYAAAAKABgAAAAKAAUAAAAKABcAAAAKAAQAAAAJABwAAAAJAAcAAAAJABsAAAAKAAUAAAAJABoAAAAJAAYAAAAJABkAAAAJAAIAAAAJABgAAAAKAAUAAAAJABcAAAAKAAAAAAAIABwAAAAJAAMAAAAIABsAAAAKAAUAAAAIABoAAAAKAAEAAAAIABkAAAAKAAEAAAAIABgAAAAKAAUAAAAIABcAAAAKAAQAAAAHABwAAAAJAAMAAAAHABsAAAAKAAEAAAAHABoAAAAKAAUAAAAHABkAAAAKAAEAAAAHABgAAAAJAAIAAAAHABcAAAAKAAQAAAAGABwAAAAJAAMAAAAGABsAAAAJAAIAAAAGABoAAAAJAAIAAAAGABkAAAAJAAIAAAAGABgAAAAJAAIAAAAGABcAAAAKAAQAAAAFABwAAAAJAAMAAAAFABsAAAAKAAUAAAAFABoAAAAJAAIAAAAFABkAAAAJAAIAAAAFABgAAAAKAAEAAAAFABcAAAAKAAQAAAAEABwAAAAJAAcAAAAEABsAAAAJAAYAAAAEABoAAAAKAAEAAAAEABkAAAAKAAEAAAAEABgAAAAKAAEAAAAEABcAAAAKAAAAAAADABwAAAAJAAMAAAADABsAAAAJAAYAAAADABoAAAAKAAUAAAADABkAAAAJAAIAAAADABgAAAAJAAYAAAADABcAAAAKAAAAAAACABwAAAAJAAcAAAACABsAAAAKAAUAAAACABoAAAAJAAIAAAACABkAAAAKAAEAAAACABgAAAAJAAYAAAACABcAAAAKAAAAAAABABwAAAAJAAcAAAABABsAAAAKAAEAAAABABoAAAAKAAUAAAABABkAAAAJAAYAAAABABgAAAAKAAEAAAABABcAAAAGAAUAAAAAABwAAAAJAAcAAAAAABsAAAAKAAUAAAAAABoAAAAJAAIAAAAAABkAAAAJAAIAAAAAABgAAAAJAAYAAAAAABcAAAAJAAIAAAD//xwAAAAJAAcAAAD//xsAAAAKAAUAAAD//xoAAAAKAAEAAAD//xkAAAAJAAYAAAD//xgAAAAKAAEAAAD//xcAAAAKAAEAAAD+/xwAAAAIAAcAAAD+/xsAAAAIAAUAAAD+/xoAAAAIAAEAAAD+/xkAAAAIAAUAAAD+/xgAAAAIAAUAAAD+/xcAAAAIAAUAAAABABYAAAALAAIAAAABABUAAAALAAYAAAABABQAAAALAAIAAAABABMAAAALAAIAAAABABIAAAALAAYAAAABABEAAAALAAYAAAABABAAAAALAAIAAAABAA8AAAALAAYAAAABAA4AAAALAAYAAAABAA0AAAALAAYAAAABAAwAAAALAAIAAAABAAsAAAALAAIAAAABAAoAAAALAAIAAAABAAkAAAALAAIAAAABAAgAAAALAAYAAAABAAcAAAALAAIAAAABAAYAAAALAAYAAAABAAUAAAALAAIAAAABAAQAAAALAAYAAAABAAMAAAALAAIAAAABAAIAAAALAAYAAAABAAEAAAAGAAIAAAABAAAAAAAJAAIAAAABAP//AAAJAAIAAAABAP7/AAAKAAAAAAAAABYAAAAJAAYAAAAAABUAAAAJAAIAAAAAABQAAAAJAAIAAAAAABMAAAAJAAIAAAAAABIAAAAJAAYAAAAAABEAAAAKAAUAAAAAABAAAAAJAAIAAAAAAA8AAAAKAAEAAAAAAA4AAAAJAAYAAAAAAA0AAAAKAAEAAAAAAAwAAAAKAAUAAAAAAAsAAAAJAAYAAAAAAAoAAAAKAAUAAAAAAAkAAAAKAAEAAAAAAAgAAAAJAAYAAAAAAAcAAAAKAAEAAAAAAAYAAAAJAAIAAAAAAAUAAAAJAAYAAAAAAAQAAAAKAAEAAAAAAAMAAAAJAAYAAAAAAAIAAAAKAAUAAAAAAAEAAAAKAAEAAAAAAAAAAAAJAAIAAAAAAP//AAAJAAIAAAAAAP7/AAAKAAQAAAD//xYAAAAKAAEAAAD//xUAAAAKAAUAAAD//xQAAAAKAAEAAAD//xMAAAAJAAYAAAD//xIAAAAKAAEAAAD//xEAAAAKAAEAAAD//xAAAAAKAAUAAAD//w8AAAAKAAEAAAD//w4AAAAKAAEAAAD//w0AAAAKAAEAAAD//wwAAAAKAAUAAAD//wsAAAAJAAYAAAD//woAAAAKAAUAAAD//wkAAAAKAAUAAAD//wgAAAAJAAIAAAD//wcAAAAJAAYAAAD//wYAAAAKAAUAAAD//wUAAAAJAAIAAAD//wQAAAAKAAUAAAD//wMAAAAKAAEAAAD//wIAAAAJAAIAAAD//wEAAAAJAAIAAAD//wAAAAAJAAIAAAD/////AAAJAAIAAAD///7/AAAKAAAAAAD+/xYAAAAIAAEAAAD+/xUAAAAIAAEAAAD+/xQAAAAIAAEAAAD+/xMAAAAIAAUAAAD+/xIAAAAIAAUAAAD+/xEAAAAIAAEAAAD+/xAAAAAIAAEAAAD+/w8AAAAIAAEAAAD+/w4AAAAIAAEAAAD+/w0AAAAIAAEAAAD+/wwAAAAIAAUAAAD+/wsAAAAIAAUAAAD+/woAAAAIAAEAAAD+/wkAAAAIAAEAAAD+/wgAAAAIAAUAAAD+/wcAAAAIAAUAAAD+/wYAAAAIAAEAAAD+/wUAAAAIAAUAAAD+/wQAAAAIAAUAAAD+/wMAAAAIAAEAAAD+/wIAAAAIAAEAAAD+/wEAAAAIAAUAAAD+/wAAAAAIAAUAAAD+////AAAIAAUAAAD+//7/AAAIAAQAAAADAAEAAAAJAAMAAAADAAAAAAAJAAYAAAADAP//AAAKAAEAAAADAP7/AAAKAAAAAAACAAEAAAAJAAMAAAACAAAAAAAKAAEAAAACAP//AAAKAAEAAAACAP7/AAAKAAQAAAAxABYAAAALAAIAAAAxABUAAAALAAIAAAAxABQAAAALAAIAAAAxABMAAAALAAIAAAAxABIAAAALAAIAAAAxABEAAAALAAYAAAAxABAAAAALAAYAAAAxAA8AAAALAAYAAAAxAA4AAAALAAYAAAAxAA0AAAALAAIAAAAxAAwAAAALAAIAAAAxAAsAAAALAAYAAAAxAAoAAAALAAIAAAAxAAkAAAALAAYAAAAxAAgAAAALAAYAAAAxAAcAAAALAAIAAAAxAAYAAAALAAYAAAAxAAUAAAALAAIAAAAxAAQAAAALAAIAAAAxAAMAAAALAAYAAAAxAAIAAAALAAYAAAAxAAEAAAALAAYAAAAxAAAAAAALAAIAAAAxAP//AAALAAIAAAAxAP7/AAALAAAAAAAwABYAAAAKAAUAAAAwABUAAAAJAAIAAAAwABQAAAAJAAYAAAAwABMAAAAJAAIAAAAwABIAAAAJAAYAAAAwABEAAAAKAAEAAAAwABAAAAAKAAEAAAAwAA8AAAAKAAEAAAAwAA4AAAAJAAIAAAAwAA0AAAAKAAEAAAAwAAwAAAAKAAEAAAAwAAsAAAAKAAEAAAAwAAoAAAAJAAIAAAAwAAkAAAAKAAEAAAAwAAgAAAAKAAUAAAAwAAcAAAAJAAIAAAAwAAYAAAAJAAYAAAAwAAUAAAAJAAYAAAAwAAQAAAAJAAIAAAAwAAMAAAAKAAEAAAAwAAIAAAAJAAIAAAAwAAEAAAAJAAIAAAAwAAAAAAAJAAIAAAAwAP//AAAKAAUAAAAwAP7/AAAKAAAAAAAvABYAAAAKAAUAAAAvABUAAAAKAAUAAAAvABQAAAAKAAEAAAAvABMAAAAKAAUAAAAvABIAAAAKAAUAAAAvABEAAAAKAAUAAAAvABAAAAAKAAEAAAAvAA8AAAAJAAYAAAAvAA4AAAAKAAUAAAAvAA0AAAAKAAUAAAAvAAwAAAAJAAYAAAAvAAsAAAAJAAYAAAAvAAoAAAAJAAIAAAAvAAkAAAAKAAEAAAAvAAgAAAAJAAIAAAAvAAcAAAAJAAYAAAAvAAYAAAAJAAIAAAAvAAUAAAAJAAYAAAAvAAQAAAAKAAEAAAAvAAMAAAAJAAIAAAAvAAIAAAAKAAEAAAAvAAEAAAAKAAUAAAAvAAAAAAAJAAIAAAAvAP//AAAJAAIAAAAvAP7/AAAKAAQAAAAuABYAAAAIAAUAAAAuABUAAAAIAAUAAAAuABQAAAAIAAUAAAAuABMAAAAIAAUAAAAuABIAAAAIAAUAAAAuABEAAAAIAAEAAAAuABAAAAAIAAEAAAAuAA8AAAAIAAUAAAAuAA4AAAAIAAEAAAAuAA0AAAAIAAUAAAAuAAwAAAAIAAUAAAAuAAsAAAAIAAUAAAAuAAoAAAAIAAEAAAAuAAkAAAAIAAUAAAAuAAgAAAAIAAUAAAAuAAcAAAAIAAEAAAAuAAYAAAAIAAEAAAAuAAUAAAAIAAEAAAAuAAQAAAAIAAUAAAAuAAMAAAAIAAEAAAAuAAIAAAAIAAEAAAAuAAEAAAAFAAYAAAAuAAAAAAAKAAUAAAAuAP//AAAKAAUAAAAuAP7/AAAKAAAAAAAtAAEAAAAJAAcAAAAtAAAAAAAJAAYAAAAtAP//AAAJAAYAAAAtAP7/AAAKAAAAAAAsAAEAAAAJAAcAAAAsAAAAAAAKAAEAAAAsAP//AAAJAAIAAAAsAP7/AAAKAAQAAAAHAAEAAAALAAcAAAAHAAAAAAALAAIAAAAHAP//AAALAAIAAAAHAP7/AAAHAAEAAAAGAAEAAAAJAAcAAAAGAAAAAAAJAAIAAAAGAP//AAAJAAYAAAAGAP7/AAAKAAAAAAAFAAEAAAAJAAMAAAAFAAAAAAAKAAUAAAAFAP//AAAKAAUAAAAFAP7/AAAKAAAAAAAEAAEAAAAJAAMAAAAEAAAAAAAJAAIAAAAEAP//AAAKAAUAAAAEAP7/AAAKAAQAAAArAAEAAAAJAAMAAAArAAAAAAAJAAIAAAArAP//AAAJAAIAAAArAP7/AAAKAAAAAAAqAAEAAAAJAAMAAAAqAAAAAAAKAAEAAAAqAP//AAAJAAYAAAAqAP7/AAAKAAQAAAApAAEAAAAJAAcAAAApAAAAAAAJAAYAAAApAP//AAAKAAEAAAApAP7/AAAKAAAAAAAoAAEAAAAIAAcAAAAoAAAAAAAIAAEAAAAoAP//AAAIAAEAAAAoAP7/AAAEAAEAAAAbAAEAAAAJAAMAAAAbAAAAAAAKAAEAAAAbAP//AAAJAAYAAAAbAP7/AAAKAAQAAAAaAAEAAAAJAAcAAAAaAAAAAAAJAAYAAAAaAP//AAAKAAUAAAAaAP7/AAAKAAAAAAAZAAEAAAAJAAMAAAAZAAAAAAAJAAYAAAAZAP//AAAKAAUAAAAZAP7/AAAKAAAAAAAYAAEAAAAJAAcAAAAYAAAAAAAKAAUAAAAYAP//AAAKAAEAAAAYAP7/AAAKAAQAAAAXAAEAAAAJAAMAAAAXAAAAAAAKAAUAAAAXAP//AAAKAAUAAAAXAP7/AAAKAAQAAAAWAAEAAAAJAAMAAAAWAAAAAAAKAAEAAAAWAP//AAAKAAEAAAAWAP7/AAAKAAAAAAAHAPz/AAABAAQAAAAHAP3/AAAAAAYAAAAPAPz/AAACAAcAAAAOAPz/AAACAAcAAAANAPz/AAACAAMAAAAMAPz/AAACAAMAAAALAPz/AAACAAMAAAAKAPz/AAACAAMAAAAJAPz/AAACAAMAAAAIAPz/AAACAAcAAAAfAPz/AAABAAAAAAAoAPz/AAADAAAAAAAnAPz/AAACAAMAAAAmAPz/AAACAAcAAAAlAPz/AAACAAMAAAAkAPz/AAACAAcAAAAjAPz/AAACAAMAAAAiAPz/AAACAAcAAAAhAPz/AAACAAMAAAAgAPz/AAACAAMAAAAoAP3/AAAAAAIAAAAQAPz/AAADAAAAAAAQAP3/AAAAAAYAAAAfAP3/AAAAAAIAAAAfAAEAAAALAAcAAAAfAAAAAAALAAIAAAAfAP//AAALAAYAAAAfAP7/AAAHAAEAAAAeAAEAAAAJAAMAAAAeAAAAAAAJAAYAAAAeAP//AAAJAAYAAAAeAP7/AAAKAAQAAAAdAAEAAAAJAAcAAAAdAAAAAAAJAAIAAAAdAP//AAAJAAYAAAAdAP7/AAAKAAAAAAAcAAEAAAAJAAcAAAAcAAAAAAAKAAEAAAAcAP//AAAKAAUAAAAcAP7/AAAKAAAAAAAVAAEAAAAJAAcAAAAVAAAAAAAJAAYAAAAVAP//AAAKAAUAAAAVAP7/AAAKAAQAAAAUAAEAAAAJAAMAAAAUAAAAAAAKAAEAAAAUAP//AAAJAAIAAAAUAP7/AAAKAAAAAAATAAEAAAAJAAcAAAATAAAAAAAJAAYAAAATAP//AAAKAAUAAAATAP7/AAAKAAAAAAASAAEAAAAJAAcAAAASAAAAAAAKAAUAAAASAP//AAAJAAYAAAASAP7/AAAKAAAAAAARAAEAAAAJAAcAAAARAAAAAAAJAAIAAAARAP//AAAKAAEAAAARAP7/AAAKAAAAAAAQAAEAAAAIAAMAAAAQAAAAAAAIAAUAAAAQAP//AAAIAAEAAAAQAP7/AAAEAAEAAAA=")

[node name="PlayerChecker" type="Area2D" parent="Units" index="0"]
position = Vector2(224, 16)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Units/PlayerChecker" index="0"]
shape = SubResource("SegmentShape2D_hhm2q")

[node name="SleepParticle" type="GPUParticles2D" parent="Units" index="1"]
position = Vector2(280, 176)
amount = 4
texture = ExtResource("5_uxiiv")
lifetime = 4.0
preprocess = 4.0
randomness = 0.5
process_material = SubResource("ParticleProcessMaterial_6l2gc")

[node name="BigMushroom" parent="Units/Enemies" index="0" instance=ExtResource("3_qeyvo")]
position = Vector2(0, -16)

[node name="Player" parent="." index="4"]
position = Vector2(152, 176)

[node name="GameCamera" parent="." index="5"]
position = Vector2(152, 176)

[node name="TTeleporter" parent="Entrances" index="0" instance=ExtResource("4_vq4ss")]
position = Vector2(0, -16)
vertical = false
target_scene = 165
target_entry_point = 6

[node name="EntryPoint" parent="Entrances/TTeleporter" index="2" instance=ExtResource("5_qeyvo")]
position = Vector2(96, 24)
location = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="8"]
libraries = {
&"": SubResource("AnimationLibrary_uxiiv")
}

[node name="StunTimer" type="Timer" parent="." index="9"]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Units/PlayerChecker" to="." method="_on_player_checker_body_entered"]
[connection signal="defeated" from="Units/Enemies/BigMushroom" to="." method="_on_big_mushroom_defeated"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
